feat(server): add BOGO discount style
